# rust-crud

./: Cargo.toml  README.md  index.html
src/: input.rs  item.rs  list.rs  main.rs  modal.rs  model.rs
static/: index.html  style.css
