[package]
name = "rust-crud"
version = "0.1.0"
authors = ["joselo <joseloc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.10.0"
stdweb = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "yew_dev_viewer"
path = "src/model.rs"
