[package]
name = "rust-crud"
version = "0.1.0"
authors = ["joselo <joseloc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
serde = "1.0.118"
serde_json = "1.0.61"

[lib]
name = "yew_dev_viewer"
path = "src/model.rs"
